--- a/src/assets/preview.css
+++ b/src/assets/preview.css
@@ -2,12 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  gap: 16px;
-  
+
   padding: 16px;
 }
 
+.preview > div {
+  max-width: 60vw;
+}
+
 .preview img {
-  max-width: calc(100% - 32px);
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
 }
